<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/app_bar_login"
        android:title="@string/login"
        android:icon="@drawable/ic_baseline_login_24"/>
    <item
        android:id="@+id/app_bar_logout"
        android:title="@string/logout"
        android:visible="false"
        android:icon="@drawable/ic_baseline_login_24"/>
    <item
        android:id="@+id/app_bar_refresh"
        android:title="@string/refresh" />
    <item
        android:id="@+id/app_bar_new_store"
        android:title="@string/store_new" />
</menu>